1.Field、Method、Constructor都是AnnotatedElement的子类，所以把泛型的上边界变成AnnotatedElement，这个只是获取注解，Executable是获取参数getParameters()